# StoreLibrary

./: .gitignore  CMakeLists.txt  DatabaseStorage.cpp  DatabaseStorage.h  DatabaseWorker.cpp  DatabaseWorker.h  Products.cpp  Products.h  Purchase.cpp  Purchase.h  README.md  Request.h  RunServer.cpp  StoreItem.h  StoreLibrary.vcxproj  StoreLibrary.vcxproj.filters  pch.h
assets/: store.json
